--- a/style.css
+++ b/style.css
@@ -18,20 +18,33 @@ body {
 
 }
 
+.sliderdiv {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+}
+
+.value {
+    margin: 5px;
+}
+
 .pad {
     border: 3px solid;
     position: absolute;
-    width: 420px;
-    height: 420px;
+    width: 450px;
+    height: 450px;
     top: 50%;
     left: 50%;
     margin-left: -210px;
     margin-top: -160px;
 }
 
-.cell {
-    margin: 10px;
-    padding: 10px;
-    font-size: large;
-    border: 2px solid;
+.grid {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: 1px solid;
+    display: inline-block;
 }
+
+
