--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
     padding: 8px;
     gap: 24px;
     text-align: center;
-
 }
 
 .sliderdiv {
@@ -24,7 +23,7 @@ body {
     gap: 8px;
 }
 
-.value {
+#value {
     margin: 5px;
 }
 
