--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 body {
     font-family: 'Work Sans', sans-serif;
+    background-color: #81b29a;
 }
 
 .banner {
     font-size: 40px;
     text-align: center;
     margin: 20px;
+    color: #3d405b;
+}
+
+.btn {
+    background-color: #f2cc8f;
+    border-radius: 2px;
 }
 
 .btns {
@@ -23,33 +30,20 @@ body {
     gap: 8px;
 }
 
-.divs {
-    height: 7vmax;
-    width: 7vmax;
-    border-radius: 2px;
-    background-color: #6d5dfc;
-}
-
 #value {
     margin: 5px;
 }
 
-.pad {
-    border: 3px solid;
-    position: absolute;
-    width: 450px;
-    height: 450px;
-    top: 50%;
-    left: 50%;
-    margin-left: -210px;
-    margin-top: -160px;
+.flex-container {
+    display: flex;
+    justify-content: center;
 }
 
-.grid {
-    width: auto;
-    height: auto;
+.pad {
+    width: 500px;
+    height: 500px;
     display: grid;
-    border: 2px solid;
 }
+
 
 
